syntax = "proto3";
import "google/protobuf/wrappers.proto";

/** Based on Team @teamest/models/raw */
message Team {
  string name = 1;
  bool is_external = 2;
}

/** Based on EventType @teamest/models/raw */
enum EventType {
  OTHER = 0;
  DUTY = 1;
  MATCH = 2;
}

/** Based on Match @teamest/models/raw */
message Match {
  Team home = 1;
  Team away = 2;
  Team duty = 3;
  google.protobuf.StringValue round = 4;
}

/** Based on Duty @teamest/models/raw */
message Duty {
  Team home = 1;
  Team away = 2;
  Team duty = 3;
  google.protobuf.StringValue round = 4;
}

/** Based on Event @teamest/models/raw */
message EventWrapper {
  EventType type = 1;
  string time = 2;
  google.protobuf.StringValue timezone = 3;
  google.protobuf.Int32Value duration = 4;
  google.protobuf.StringValue court = 5;
  google.protobuf.StringValue venue = 6;
  oneof sub_event {
    Match match = 7;
    Duty duty = 8;
  }
}

/** Based on TeamSeason @teamest/models/processed */
message TeamSeason {
  string competition_name = 1;
  string season_name = 2;
  string team_name = 3;
  repeated EventWrapper wrapped_events = 4;
  string last_scraped = 5;
}

/** Based on SavedTeamSeason @teamest/models/processed */
message SavedTeamSeason {
  string competition_name = 1;
  string season_name = 2;
  string team_name = 3;
  repeated EventWrapper wrapped_events = 4;
  string last_scraped = 5;
  string last_changed = 6;
}

/** Based on UpdateTeamSeasonRequest /src/service_types.ts */
message UpdateTeamSeasonRequest {
  TeamSeason team_season = 1;
}

/** Based on UpdateTeamSeasonResponse /src/service_types.ts */
message UpdateTeamSeasonResponse {
  string competition_name = 1;
  string season_name = 2;
  string team_name = 3;
  string team_season_id = 4;
  bool was_modified = 5;
}

/** Based on TeamSpecifier /src/service_types.ts */
message TeamSpecifier {
  string competition_name = 1;
  string season_name = 2;
  string team_name = 3;
}

/** Based on GetSeasonsForTeamRequest /src/service_types.ts */
message GetSeasonsForTeamRequest {
  repeated TeamSpecifier team_specifiers = 1;
  google.protobuf.StringValue updated_since = 2;
}

/** Based on GetSeasonsForTeamResponse /src/service_types.ts */
message GetSeasonsForTeamResponse {
  repeated SavedTeamSeason matching_team_seasons = 1;
}

service Season {
  rpc UpdateTeamSeason (UpdateTeamSeasonRequest) returns (UpdateTeamSeasonResponse);
  rpc GetSeasonsForTeam (GetSeasonsForTeamRequest) returns (GetSeasonsForTeamResponse);
}
